--- a/QuMixDroid/AndroidManifest.xml
+++ b/QuMixDroid/AndroidManifest.xml
@@ -13,15 +13,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="org.wieggers.qu_apps.qumixdroid.MainActivity"
-            android:label="@string/app_name" >
+        <activity android:name="org.wieggers.qu_apps.qumixdroid.LoginActivity" android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity><activity
+            android:name="org.wieggers.qu_apps.qumixdroid.MainActivity"
+            android:label="@string/app_name" >
         </activity>
+        
     </application>
 
 </manifest>
