--- a/QuMixDroid/project.properties
+++ b/QuMixDroid/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../QuMixDroid_Qu16
+android.library.reference.1=..\\QuMixDroid_Qu16
+android.library.reference.2=../QuMixDroid_Controls
