--- a/QuMixDroid_Qu16/project.properties
+++ b/QuMixDroid_Qu16/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-18
 android.library=true
-android.library.reference.1=../QuMixDroid_Communication
+android.library.reference.1=..\\QuMixDroid_Communication
+android.library.reference.2=../QuMixDroid_Controls
