Use A&H Specs to rename classes

--- a/QuMixDroid_Qu16/.settings/org.eclipse.core.resources.prefs
+++ b/QuMixDroid_Qu16/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/org/wieggers/qu_apps/controls/Fader.java=UTF-8
+encoding//src/org/wieggers/qu_apps/qu16/midi/VA_Ranges.java=UTF-8
