--- a/QuMixDroid/AndroidManifest.xml
+++ b/QuMixDroid/AndroidManifest.xml
@@ -12,7 +12,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.wieggers.qu_apps.qumixdroid"
     android:versionCode="2"
-    android:versionName="0.0.2" >
+    android:versionName="0.0.2" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="14"
